# microserde

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: de.rs  ser.rs
src/: careful.rs  error.rs  lib.rs  place.rs
src/de/: mod.rs
src/json/: de.rs  ser.rs  value.rs
src/ser/: mod.rs
tests/: test_derive.rs  test_nested.rs  test_number.rs
tests/regression/: issue9.rs
